--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 
+contact_note: 
+
 
 google_analytics: UA-XXXXXXXXX # out your google-analytics code
 
